--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,4 +1,9 @@
 /* Reset styles */
+
+* {
+  box-sizing: border-box;
+}
+
 h1,
 h2,
 h3,
@@ -17,11 +22,6 @@ ul {
   margin: 0;
   padding: 0;
   list-style: none;
-}
-
-a {
-  color: currentColor;
-  text-decoration: none;
 }
 
 button {
