--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,24 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+.gallery {
+  display: flex;
+  width: 1128px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin: 0 auto;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 24px;
+}
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+.gallery-link {
+  display: block;
+  width: 360px;
+  height: 200px;
+  flex-shrink: 0;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+.gallery-image {
+  width: 100%;
+  height: 100%;
 }
